@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.2 2012/01/23 01:28:56 joerg Exp $
+#	$NetBSD: Makefile,v 1.2.2.1 2012/03/08 17:54:42 riz Exp $
 
 .include <bsd.own.mk>
 
@@ -6,7 +6,7 @@ DIST=	${NETBSDSRCDIR}/external/ibm-public/postfix/dist/man/man5
 .PATH:	${DIST}
 
 MAN=	access.5 aliases.5 bounce.5 canonical.5 relocated.5 \
-	transport.5 virtual.5 pcre_table.5 regexp_table.5 \
+	transport.5 virtual.5 sqlite_table.5 regexp_table.5 \
 	cidr_table.5 header_checks.5 ldap_table.5 master.5  \
 	nisplus_table.5 generic.5
 MAN+=	postconf.5 postfix-wrapper.5
